<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/begin"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:layout_marginTop="140sp"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/splash_animation_library"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/Library_management_app"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_marginTop="15sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/powered_by"
            android:textAlignment="textEnd"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/td"
            android:textAlignment="textStart"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.51" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Darisi_Omkar" />

            <TextView
                android:layout_width="2dp"
                android:layout_height="24dp"
                android:gravity="center"
                android:text="@string/vertical_line" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/N_Ananth" />

            <TextView
                android:layout_width="2dp"
                android:layout_height="24dp"
                android:gravity="center"
                android:text="@string/vertical_line" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/jeevan" />

            <TextView
                android:layout_width="2dp"
                android:layout_height="24dp"
                android:gravity="center"
                android:text="@string/vertical_line" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Ganesh" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:text="@string/guidance_lokesh_grandhi"
        android:textAlignment="center"
        android:textSize="15sp" />

</LinearLayout>
